tests/tests/errors/2006-14.vb
'#compiler-options:/codepage:
'#compiler-message:Command line error BC2006 : option 'codepage' requires ':<number>'
'#exit-code:1